Bottm spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ section {
   border-radius: 20px;
   overflow: hidden;
   box-shadow: #bfbfbfdb 20px 10px 55px;
+  padding-bottom: 20px;
 }
 
 .card img {
